HW-05/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: default
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
