HW-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kube-nerohome-ru
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube.nerohome.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 80
